--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,9 @@ footer{
   display: flex;
   justify-content: space-around;
 }
+
+form{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
