agrego lazy loading a las paginas

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+} */
+.taskList{
+    padding: 2rem;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    min-width: 320px;
+    min-height: 100vh;
 }
 
 
@@ -66,4 +75,12 @@ form{
   display:flex;
   flex-direction:column;
   justify-content:center;
+}
+
+.Home{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
 }
